Get a single client
