# swagger.yaml
@@ -36,10 +36,10 @@ paths:
           - "application/json"
         parameters:
           - in: "body"
-            name: "index"
+            name: "clients"
             description: "Client object that needs to be added to the store"
-            schema:
-              $ref: "#/definitions/clients"
+            # schema:
+            #   $ref: "#/definitions/clients"
         responses:
           "400":
             description: "Bad request"
@@ -56,28 +56,48 @@ paths:
         - "Clients"
         summary: "Edit client"
         description: "Update a single user by passing mongoose objectID"
+        consumes:
+        - application/json
         produces:
-        - "application/json"
+        - application/json
         parameters:
         - name: "id"
-          in: "query"
+          in: "path"
           description: "Mongoose objectID that need to pass in"
           required: true
-          type: "String"
-        - in: "body"
-          name: "index"
-          description: "Client object that needs to be added to the store"
-        
+        - in: body
+          name: clients
+          description: "Client object that needs to be updated"
+          schema:
+              $ref: "#/definitions/clients"
         responses:
           "200":
             description: "successful operation"
-            schema:
-              items:
-                $ref: "#/definitions/clients"
           "400":
             description: "Bad request"
           "404":
             description: "id not found"
+      
+      get:
+        tags:
+        - "Clients"
+        summary: "Return and single client"
+        description: "Get single client by ID" 
+        produces:
+        - "application/json"
+        parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of the client you want to retrieve"
+          required: true
+        responses:
+          "200":
+            description: "Success operation"
+          "400":
+            description: "Invalid ID supplied"
+          "404":
+            description: "client not found"
+
       delete:
         tags:
         - "Clients"
@@ -88,11 +108,8 @@ paths:
         parameters:
         - name: "id"
           in: "path"
-          description: "ID of the client that needs to be deleted"
+          description: "ID of the client that you want to be delete"
           required: true
-          # type: "integer"
-          # minimum: 1.0
-          # format: "int64"
         responses:
           "200":
             description: "Success operation"
@@ -101,6 +118,7 @@ paths:
           "404":
             description: "client not found"
 
+  # providers
   /providers:
       get:
         tags: [Providers]
@@ -148,7 +166,6 @@ definitions:
       - "name"
       - "email"
       - "phone"
-      - "providers"
     properties:
       name:
         type: string
@@ -159,8 +176,10 @@ definitions:
       providers:
         type: array
         items:
-          type:
-             $ref: "#/definitions/providers"
+          type: string
+
+
+             
   
   providers:
     type: object
